first alpha version 0.2

--- a/projectDS/templates/index.html
+++ b/projectDS/templates/index.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <form action="/download" method="POST">
                     <label for="input">PROJECT BY DC</label>
-                    <input type="text" name="link" id="input" placeholder="Your link here">
+                    <input type="text" name="url" id="input" placeholder="Your link here">
                     <button type="submit"><span>DOWNLOAD</span></button>
                 </form>
             </div>
