--- a/projectDS/templates/index.html
+++ b/projectDS/templates/index.html
@@ -17,9 +17,12 @@
                 <form action="/download" method="POST">
                     <label for="input">PROJECT BY DC</label>
                     <input type="text" name="url" id="input" placeholder="Your link here">
-                    <button type="submit"><span>DOWNLOAD</span></button>
+                    <button type="submit"><span>download using console</span></button>
+                    <button type="submit" formaction="/download2"><span>download using browser</span></button>
+
                 </form>
             </div>
+        
         </main>
     
     </body>
