--- a/projectDS/static/css/index.css
+++ b/projectDS/static/css/index.css
@@ -33,6 +33,7 @@ label {
 
 /* Style the container */
 .container {
+    margin-bottom: 10px;
     display: flex;
     font-size: 10rem;
     font-weight: 700;
@@ -43,10 +44,11 @@ label {
 
 /* Style the input */
 input {
+    width: 90%;
     border: 0;
     height: 6vi;
-    margin-top: 8rem;
-    margin-bottom: 8rem;
+    margin-top: 7rem;
+    margin-bottom: 7rem;
     background-color: rgb(191, 223, 236);
     color: black;
     ::placeholder {
@@ -77,7 +79,7 @@ button {
     );
     border-radius: 8px;
     color: #fff;
-    font-size: 18px;
+    font-size: 16px;
     padding: 1rem 2rem;
     cursor: pointer;
     transition: .3s;
