--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,7 @@
             <div class="container">
                 <form action="/download" method="POST">
                     <label for="input">PROJECT BY DC</label>
-                    <input type="text" name="url" id="input" placeholder="Your link here">
-                    <button type="submit"><span>download using console</span></button>
+                    <input type="text" autocomplete="off" name="url" id="input" placeholder="Your link here">
                     <button type="submit" formaction="/download2"><span>download using browser</span></button>
 
                 </form>
@@ -25,5 +24,7 @@
         
         </main>
     
+
+
     </body>
 </html>
